# nr2

./: .gitignore  CLAUDE.md  Cargo.toml  README_LIBRARY.md  config.example.toml  config.filter.example.toml  flake.nix  justfile  test_filter.toml
examples/: custom_processor.rs  simple_relay_router.rs
src/: cli.rs  config.rs  fetcher.rs  lib.rs  main.rs  processor.rs  relay_manager.rs  relay_router.rs  state.rs  timespan.rs
src/processor/: geohash_filter.rs  mod.rs  passthrough.rs  print.rs  wait.rs
tests/: continuous_fetching.rs  fetch_span_marking.rs
